<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.entertaining.maths.fragments.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_divide_center"
            android:layout_width="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            app:layout_constraintGuide_begin="16dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            app:layout_constraintGuide_end="16dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/home_background"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/points_layout"
            android:layout_width="wrap_content"
            style="@style/home_layout"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/points_textView"
                android:layout_width="wrap_content"
                style="@style/home_textview"
                android:text="@{viewModel.points}"
                android:layout_height="wrap_content"
                tools:text="Баллы 0.00" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/word_problem_textView"
            style="@style/home_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/problem"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/problem_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/problem_textView"
            style="@style/home_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.problem.problem}"
            android:fontFamily="@font/roboto_light_italic"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="6+5-7=" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/answer_textView"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start" />

        <TextView
            android:id="@+id/answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/home_textview"
            android:textColor="@color/white"
            android:text="@string/answer"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/check_layout"
            app:layout_constraintStart_toStartOf="@+id/check_layout" />

        <EditText
            android:id="@+id/answer_editText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_frame"
            app:layout_constraintBottom_toBottomOf="@+id/answer_textView"
            app:layout_constraintStart_toEndOf="@+id/answer_textView"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/check_layout"
            style="@style/home_layout"
            android:layout_width="@dimen/hint_and_check_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/hint_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/check_textView"
                style="@style/home_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check" />

            <TextView
                android:visibility="gone"
                android:id="@+id/next_textView"
                style="@style/home_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/hint_layout"
            style="@style/home_layout"
            android:layout_width="@dimen/hint_and_check_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/support_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/hint_textView"
                style="@style/home_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/support_layout"
            style="@style/home_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:paddingTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@id/guideline_divide_center"
            app:layout_constraintStart_toEndOf="@id/guideline_start">

            <TextView
                android:id="@+id/support_textView"
                style="@style/home_textview"
                android:textSize="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                tools:ignore="SpUsage" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/reward_layout"
            style="@style/home_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:paddingTop="4dp"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@id/guideline_divide_center"
            app:layout_constraintEnd_toStartOf="@id/guideline_end">

            <TextView
                android:id="@+id/reward_textView"
                style="@style/home_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:text="@string/reward"
                tools:ignore="SpUsage" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
